2web/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 2web
  namespace: 2web-ns
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: aws5.com
      http:
        paths:
          - path: /ip
            pathType: Prefix
            backend:
              service:
                name: svc-ip
                port:
                  number: 80
          - path: /h
            pathType: Prefix
            backend:
              service:
                name: svc-h
                port:
                  number: 80
